Add images on rotation
Signed-off-by: Don Bowman <db@donbowman.ca>

--- a/install
+++ b/install
@@ -5,6 +5,7 @@
 # Licensed under Apache License, Version 2.0
 #
 
+mkdir -p ~/.config/auto-rotate
 dir=$(dirname "$(readlink -f "$0")")
 mkdir -p ~/.config/systemd/user
 sed -e "s?ExecStart=.*?ExecStart=$dir/auto-rotate?" < auto-rotate.service > ~/.config/systemd/user/auto-rotate.service
