Working on autorotate piece

--- a/install
+++ b/install
@@ -8,6 +8,7 @@
 dir=$(dirname "$(readlink -f "$0")")
 mkdir -p ~/.config/systemd/user
 sed -e "s?ExecStart=.*?ExecStart=$dir/auto-rotate?" < auto-rotate.service > ~/.config/systemd/user/auto-rotate.service
+# sed -i "s?ExecStart=.*?ExecStart=$dir/auto-rotate?"  ~/.config/systemd/user/auto-rotate.service
 systemctl --user enable auto-rotate
 systemctl --user start auto-rotate
 
